--- a/Chebao.BackAdmin/css/admin.css
+++ b/Chebao.BackAdmin/css/admin.css
@@ -109,7 +109,7 @@ a:hover{text-decoration:underline;}a:focus {outline:0;}
 .bttj{padding:10px;}
 
 .biaoge1{}.biaoge1 td{padding:3px;}
-.biaoge2{}.biaoge2 tr:hover{background:#f4f8fc;}.biaoge2 td{padding:1px 3px; text-align:left; border-bottom:1px dashed #deeffb;}.biaoge2 td img{vertical-align:middle;}
+.biaoge2{}.biaoge2 tr:hover{background:#CEE4FA;}.biaoge2 td{padding:1px 3px; text-align:left; border-bottom:1px dashed #60ACE2;}.biaoge2 td img{vertical-align:middle;}
 	.bgbt{font-weight:700; line-height:20px;background-color: rgb(242, 249, 255);}
 	.bgbt a{color:Blue;}
 	.bgbt a:hover{color:Blue;text-decoration:none;}
