--- a/Chebao.BackAdmin/css/admin.css
+++ b/Chebao.BackAdmin/css/admin.css
@@ -27,6 +27,7 @@ a:hover{text-decoration:underline;}a:focus {outline:0;}
 .w230{width:230px!important;}
 .w240{width:240px!important;}
 .w300{width:300px!important;}
+.w500{width:500px!important;}
 .bold{font-weight:bolder;}
 .c{padding-bottom:60px;}
 .hide{display:none;}
