--- a/Chebao.BackAdmin/css/admin.css
+++ b/Chebao.BackAdmin/css/admin.css
@@ -258,3 +258,12 @@ a:hover{text-decoration:underline;}a:focus {outline:0;}
     .msgflayb{float:left;height:38px;background:url(../images/msgb.png) repeat-x;}
         .msgflayb span{height:20px;line-height:20px;display:block;margin: 11px 5px 0 5px;}
     .msgflayr{float:left;width:3px;height:38px;background:url(../images/msgr.png) no-repeat;}
+    
+    
+.overlay{position: fixed;top: 0;right: 0;bottom: 0;left: 0;z-index: 998;width: 100%;height: 100%;_padding: 0 20px 0 0;background: #f6f4f5;display: none;}
+.showbox{position: fixed;top:50px;left: 50%;z-index: 9999;opacity: 0;filter: alpha(opacity=0);margin-left: -80px;}
+*html, *html body{background-image: url(about:blank);background-attachment: fixed;}
+*html .showbox, *html .overlay{position: absolute;top: expression(eval(document.documentElement.scrollTop));}
+#AjaxLoading{border: 1px solid #8CBEDA;color: #37a;font-size: 12px;font-weight: bold;}
+#AjaxLoading div.loadingWord{width: 240px;height: 50px;line-height: 50px;border: 2px solid #D6E7F2;background: #fff;}
+#AjaxLoading img{margin: 10px 15px;float: left;display: inline;}
