--- a/Chebao.BackAdmin/css/admin.css
+++ b/Chebao.BackAdmin/css/admin.css
@@ -33,15 +33,16 @@ a:hover{text-decoration:underline;}a:focus {outline:0;}
 .hide{display:none;}
 .block{display:block;}
 .blockinline{display:inline-block;*display:inline;*zoom:1;}
-.msg{color:Red;}
-.green{color:Green;}
-.blue{color:Blue;}
-.red{color:Red;}
-.yellow{color:Yellow;}
-.orange{color:Orange;}
-.gray{color:Gray;}
+.msg{color:Red!important;}
+.green{color:Green!important;}
+.blue{color:Blue!important;}
+.red{color:Red!important;}
+.yellow{color:Yellow!important;}
+.orange{color:Orange!important;}
+.gray{color:Gray!important;}
 .vt{vertical-align:top;}
 .money{background-color:#FFEB99!important;padding-right:2px;}
+.fs12{font-size:12px!important;}
 
 .left_nav{width:122px; float:right; line-height:30px; font-size:14px; font-weight:700; letter-spacing:1px; text-align:left; padding-left:50px;}
 	.left_nav a{background:url(../images/sj.gif) no-repeat left center; padding-left:12px; color:#07519a; text-decoration:none;display:block;}
@@ -92,7 +93,7 @@ a:hover{text-decoration:underline;}a:focus {outline:0;}
 .an2{border-left:0;border-top:0;border-right:1px solid #888;border-bottom:1px solid #888; background:#e8e8e8; font-size:12px; color:#000; padding:4px 8px 1px 8px; margin:0 2px;}
 .an3{border:0; background:url(../images/nt.jpg) no-repeat; font-size:12px; width:75px; height:22px; color:#fff; margin-bottom:5px;}
 
-#search_fy{margin:10px 0px; clear:both;width:1000px;}
+#search_fy{margin:10px 0px; clear:both;}
 	#search_fy a:link,#search_fy a:visited{border:1px solid #e8e8e8; font-size:12px; padding:4px 7px; *line-height:28px!important; margin:5px 3px; color:#333; text-decoration:none;display: inline-block;}
 	#search_fy a:hover{background:#359cee; padding:3px 7px; text-decoration:none; border-color:#359cee; color:#fff;display:inline-block;margin-top: 5px;}
 	#search_fy .current{font-size:12px; padding:4px 7px; margin:0 3px; font-weight:700; color:#000;}
