--- a/Chebao.BackAdmin/css/headfoot2.css
+++ b/Chebao.BackAdmin/css/headfoot2.css
@@ -54,8 +54,9 @@ img{border:0;}
 .header_navinfo{position:absolute;width:240px;height:88px;right:0px;bottom:-4px;color:White;background:url(../images/headnavinfobg.jpg) no-repeat;}
 .navinfo_user,.navinfo_opt{width:240px;display:block;height:44px;line-height: 44px;text-align: center;position:relative;}
 .navinfo_user a,.navinfo_opt a{color:White;}
-.cccx{position: absolute;top: -5px; left: 154px; margin: 0; line-height: 14px;}
+.cccx{position: absolute;top: -5px; left: 157px; margin: 0; line-height: 14px;}
 .zyhgl{position: absolute;top: -5px; left: 37px; margin: 0; line-height: 14px;}
+.htgl{position: absolute;top: -5px; left: 97px; margin: 0; line-height: 14px;}
 .my_garage_1{padding-right:10px;position:relative;}
 .my_garage .my_garage_1,.my_garage a:hover{color:#fff;text-decoration:none;}
 .my_garage .my_garage_1{}
@@ -70,6 +71,18 @@ img{border:0;}
 #c_foot1 .cb_help{margin-left:30px;}
 .footer{height:46px;background:#000;}
 .footmain{margin:0 auto;width:1000px;height:46px;background:url(../images/footphonemail.jpg) no-repeat right;color:#7c7c7c;line-height:46px;}
+.lmenu{width: 160px;float:left;padding-top:20px;}
+.lmenu ul{}
+.lmenu ul li{line-height: 36px;color: #555;font-size: 22px;padding-left: 15px;margin: 0 20px;font-weight: bold;border-bottom: 3px solid #eee;}
+.lmenu ul li a{color:#555;}
+.lmenucurrent{border-bottom: 3px solid #2196F3!important;}
+.lmenucurrent a{color:#2196F3!important;}
+.rbody{width: 840px;display:inline-block;}
+.filter{padding: 1px 1px 5px 1px;color: #666;}
+.fbody{padding: 5px 10px;border: 1px solid #2196F3; -moz-border-radius:5px;-webkit-border-radius:5px;border-radius: 5px;}
+.tbbody{padding: 0px 1px;}
+.tbbody .biaoge2{width:100%;border:1px solid #2196F3;}
+.filter .txt{border-width: 0 0 1px 0;padding: 2px 0 1px 10px;line-height: 20px;}
 /*面包屑*/
 .n_nav,.n_nav_2{margin:0 auto; padding:12px 0;font-family:"宋体",arial;}
 .n_nav{width:984px;}
